# deepseek-sdk

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
deepseek/: __init__.py  client.py
tests/: test_client.py
