[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepseek-sdk"
version = "0.1.0"
description = "A Python SDK for the DeepSeek API."
authors = [
    { name = "Hamza Hamidi" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests>=2.25.1"
]

[project.urls]
Homepage = "https://github.com/hamzahamidi/deepseek-sdk"
